Prevent heatmap import layout jump

--- a/src/styles/inspector.css
+++ b/src/styles/inspector.css
@@ -65,12 +65,7 @@
 }
 
 .cc-file-input-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  clip: rect(0 0 0 0);
-  white-space: nowrap;
+  display: none;
 }
 
 .cc-field-row {
